overflow issues menu

--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -68,6 +68,7 @@
   
   .nav_bar_svp {
     display: block;
+    max-width: 100%;
   }
 
   .nav_bar_svp_content_hidden {
@@ -79,6 +80,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    max-width: 100%;
     height: 100%;
     background: #f4f5f0;
     z-index: 4000;
